--- a/src/style.css
+++ b/src/style.css
@@ -7,9 +7,9 @@
 }
 
 body {
-	background-color: #fff;
+	background-color: #000;
 	font: 28px/1em "Helvetica";
-	color: gray;
+	color: #FFF;
 	overflow: hidden;
 }
 
@@ -18,18 +18,18 @@ a {
 }
 
 body {
-	cursor: url('images/cursor.png') 32 32, auto;
+	cursor: url('framer/images/cursor.png') 32 32, auto;
 	cursor: -webkit-image-set(
-		url('images/cursor.png') 1x,
-		url('images/cursor@2x.png') 2x
+		url('framer/images/cursor.png') 1x,
+		url('framer/images/cursor@2x.png') 2x
 	) 32 32, auto;
 }
 
 body:active {
-	cursor: url('images/cursor-active.png') 32 32, auto;
+	cursor: url('framer/images/cursor-active.png') 32 32, auto;
 	cursor: -webkit-image-set(
-		url('images/cursor-active.png') 1x,
-		url('images/cursor-active@2x.png') 2x
+		url('framer/images/cursor-active.png') 1x,
+		url('framer/images/cursor-active@2x.png') 2x
 	) 32 32, auto;
 }
 
@@ -56,4 +56,20 @@ body:active {
 
 ::-webkit-scrollbar {
 	display: none;
+}
+
+@media only screen and (max-width: 320px) {
+  #FramerRoot {
+    -webkit-transform: scale(0.5, 0.5); rotate(.1deg);;
+    -webkit-transform-origin: 0% 0%;
+  }
+}
+
+div[name='Content'] {
+  overflow: hidden !important;
+}
+
+#FramerRoot.scaledown {
+  -webkit-transform: scale(0.5, 0.5); rotate(.1deg);;
+  -webkit-transform-origin: 0% 0%;
 }
